handle non-prowgen jobs
```bash
find /Users/hongkliu/repo/openshift/release/ci-operator/jobs/ -depth 3 -name "*.yaml" -print -exec python3 hack/migrate_non_prowgen_jobs.py {} \;
ci-operator-prowgen --from-dir ./ci-operator/config/ --to-dir ./ci-operator/jobs/

```

--- a/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.11-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.11-presubmits.yaml
@@ -60,6 +60,12 @@ presubmits:
           subPath: cluster-launch-e2e-upgrade.yaml
       serviceAccountName: ci-operator
       volumes:
+      - name: apici-ci-operator-credentials
+        secret:
+          items:
+          - key: sa.ci-operator.apici.config
+            path: kubeconfig
+          secretName: apici-ci-operator-credentials
       - name: e2e-gcp-major-upgrade-311
         projected:
           sources:
@@ -70,6 +76,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-e2e-upgrade
         name: job-definition
+      - name: pull-secret
+        secret:
+          secretName: regcred
     trigger: (?m)^/test( | .* )gcp-major-upgrade,?($|\s.*)
   - agent: kubernetes
     always_run: false
