Handle ci-operator as command with $CONFIG_SPEC
```bash
find /Users/hongkliu/repo/openshift/release/ci-operator/jobs/ -depth 3  -name "*.yaml"  -exec python3 hack/find.py {} \;
ci-operator-prowgen --from-dir ./ci-operator/config/ --to-dir ./ci-operator/jobs/

```

--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -37,9 +37,6 @@ periodics:
         value: aws
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -47,24 +44,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: launch-aws
       - name: TEST_COMMAND
@@ -161,9 +162,6 @@ periodics:
         value: azure4
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -171,24 +169,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLOUD_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLOUD_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLOUD_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLOUD_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: launch-azure
       - name: TEST_COMMAND
@@ -283,9 +285,6 @@ periodics:
         value: gcp
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -293,24 +292,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: launch-gcp
       - name: TEST_COMMAND
@@ -402,9 +405,6 @@ periodics:
         value: metal
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -412,24 +412,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "aws"
+              cluster_profile: aws
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "aws"
+              cluster_profile: aws
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "aws"
+              cluster_profile: aws
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: "aws"
+              cluster_profile: aws
       - name: JOB_NAME_SAFE
         value: launch-metal
       - name: TEST_COMMAND
@@ -515,9 +519,6 @@ periodics:
         value: vsphere
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -525,24 +526,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: launch-vsphere
       - name: TEST_COMMAND
@@ -635,9 +640,6 @@ periodics:
         value: aws
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -645,24 +647,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       image: ci-operator:latest
       imagePullPolicy: Always
       name: ""
@@ -743,9 +749,6 @@ periodics:
         value: azure4
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -753,11 +756,15 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-azure-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
       image: ci-operator:latest
       imagePullPolicy: Always
@@ -839,9 +846,6 @@ periodics:
         value: gcp
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -849,24 +853,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       image: ci-operator:latest
       imagePullPolicy: Always
       name: ""
