--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
@@ -171,9 +171,6 @@ periodics:
         value: aws
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -181,24 +178,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: e2e-aws
       - name: TEST_COMMAND
@@ -289,9 +290,6 @@ periodics:
         value: aws
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -299,24 +297,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: e2e-aws-serial
       - name: TEST_COMMAND
@@ -406,9 +408,6 @@ periodics:
         value: aws
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -416,24 +415,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: e2e-aws
       - name: TEST_COMMAND
@@ -523,9 +526,6 @@ periodics:
         value: aws
       - name: CONFIG_SPEC
         value: |
-          tag_specification:
-            name: "$(BRANCH)"
-            namespace: ocp
           resources:
             '*':
               limits:
@@ -533,24 +533,28 @@ periodics:
               requests:
                 cpu: 100m
                 memory: 200Mi
+          tag_specification:
+            cluster: https://api.ci.openshift.org
+            name: $(BRANCH)
+            namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: "$(CLUSTER_TYPE)"
+              cluster_profile: $(CLUSTER_TYPE)
       - name: JOB_NAME_SAFE
         value: e2e-aws-serial
       - name: TEST_COMMAND
