--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -436,15 +436,14 @@ presubmits:
           value: aws
         - name: CONFIG_SPEC
           value: |
-            tag_specification:
-              name: '4.4'
-              namespace: ocp
             base_images:
               base:
+                cluster: https://api.ci.openshift.org
                 name: '4.4'
                 namespace: ocp
                 tag: base
               machine-os-content:
+                cluster: https://api.ci.openshift.org
                 name: machine-os-content
                 namespace: rhcos
                 tag: latest
@@ -476,6 +475,10 @@ presubmits:
                 requests:
                   cpu: 100m
                   memory: 200Mi
+            tag_specification:
+              cluster: https://api.ci.openshift.org
+              name: '4.4'
+              namespace: ocp
             tests:
             - as: e2e-aws
               commands: TEST_SUITE=openshift/conformance/parallel run-tests
