Autoconfigbrancher: Stop bothering humans

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -463,6 +463,8 @@ periodics:
       - --current-release=4.4
       - --future-release=4.5
       - --future-release=4.6
+      - --self-approve=true
+      - --assign=ghost
       image: registry.svc.ci.openshift.org/ci/auto-config-brancher:latest
       imagePullPolicy: Always
       name: "auto-config-brancher"
